# zenith

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README-ENG.md  README.md  main.cpp
alkaid/: alkaid-main.cpp  main.cpp
alkaid/app/: app.cpp  app.h
alkaid/event/: event.h  key-event.h  mouse-event.h  window-event.h
alkaid/init/: starter.cpp  starter.h
alkaid/layer/: editor-layer.cpp  editor-layer.h  home-layer.cpp  home-layer.h  imgui-layer.h  layer.cpp  layer.h
alkaid/models/: models.h
alkaid/render/: graphics-context.cpp  graphics-context.h  renderer.cpp  renderer.h
alkaid/tool/: arrays.h  create-scope.h  layer-vector.h
alkaid/window/: window.cpp  window.h
api/opengl/: glfw-api.h
application/: CMakeLists.txt  NativeWindow.cpp  NativeWindow.h  application.cpp  application.h  circular-queue.cpp  circular-queue.h  event.cpp  event.h  layer.h  native-window.cpp  native-window.h  window.cpp  window.h
application/event/: CMakeLists.txt  event-window-resize.cpp  event-window-resize.h  event.h  key-codes.h  key-event.h  mouse-codes.h  mouse-event.h  window-event.h
application/platform/windows/: windows.cpp  windows.h
example/: create-jvm.txt
example/gird2/: main.c
example/grid/: CMakeLists.txt  main.cpp  shader.cpp  shader.frag  shader.h
example/line/: CMakeLists.txt  main.cpp
example/model/: CMakeLists.txt  main.cpp  mesh.h  model.h
example/std/: CMakeLists.txt  main.cpp
framework/: CMakeLists.txt  component-container.h  component.h  font.h  framework.cpp  framework.h  imgui-env.h  viewport.cpp  viewport.h  zenith-font.h
framework/component/: component.cpp  component.h  menu-implements.cpp
fuckstd/: Arrays.h  CMakeLists.txt  FK-FILE.h  FK-STRING.h  String.h  fkstr.h  main.cpp  string.h
fuckstd/io/: FILE.h  stream.cpp  stream.h
gui/: CMakeLists.txt  README  gui.cpp
guiapi/: CMakeLists.txt  component.cpp  component.h
iface/: CMakeLists.txt  engine-iface-config.cpp  engine-iface-config.h
imgui/: imgui-layer.h
include/: jvm.h  zenith.h
include/KHR/: khrplatform.h
include/alkaid/: assert.h  globalization.h  type.h
include/api/: .glfw-api.h.swp  glfw-api.h  glm-api.h  imgui-api.h
include/glad/: glad-com.h  glad-core.h  glad.h
include/render/: api.h  renderer-config.h
include/xuanming/: assert.h  type.h
include/zenith/: assert.h  enum.h  glob.h  globalization  globalization.h  imgui-env.h  (+7 more)
lang/: game-dev-lang.h  zh_CN.txt
launcher/: CMakeLists.txt  entry_ptr.h  launcher.cpp  launcher.h  zenith.h
launcher/core/: application.cpp  application.h  core.h
layer/: editor-layer.cpp  editor-layer.h  layer.h
project-include/: assert.h  globalization.h  xuanming.h
render/: camera.h  graphics-context.cpp  graphics-context.h  render-api.cpp  render-api.h  render-command.cpp  render-command.h  render-graphics.cpp  render-graphics.h  renderer.cpp  renderer.h
renderer/: renderer-context.h
sandbox/: CMakeLists.txt  sandbox_app.cpp
scene/: scene.cpp  scene.h
script/: Makefile.groovy  checkout-docking-for-imgui.bat
sh/: blue-vfs  blue.vfs  default-vfs  fragment-fsh  grid-vfs  line-vfs  shader-vfs
shader/: core-vfs  core.vfs  vertex-vsh
subprojects/: pom.xml
tool/: CMakeLists.txt  FK-STRING.h  assist.h  logger.cpp  render-util.h  timestep.h
viewport/: CMakeLists.txt  child-window.cpp  child-window.h  component-container.cpp  component-container.h  font.cpp  font.h  layout.cpp  viewport.cpp  viewport.h  zenith-font.h
viewport/component/: CMakeLists.txt  component.cpp  component.h  layout.cpp  layout.h  menu-define.h  menu-implements.cpp  window.cpp  zenith-component.h
xuanming/: main.cpp
zenith/: CMakeLists.txt  _config.h  color.h  glad.c  glfw-api.cpp  main.cpp  settings.cpp  settings.h  shader.h  state.cpp  state.h  zenith.h
zenith/buf/: buf.h  index-buf.cpp  vertex-array.cpp  vertex-array.h  vertex-buf.cpp  vertex-buf.h
zenith/core/: application.cpp  application.h  core.h  entry_ptr.h
zenith/event/: event.h  input.cpp  input.h  key-event.h  keycode.h  mouse-event.h  window-event.h
zenith/example/: example-layer.h
zenith/importer/: importer.cpp  importer.h
zenith/init/: starter.cpp  starter.h
zenith/japi/: japi.h  string.cpp  string.h
zenith/layer/: editor-layer.cpp  editor-layer.h  home-layer.cpp  home-layer.h  imgui-layer.cpp  imgui-layer.h  layer.cpp  layer.h
zenith/layer/plane/: properties.h  resource-manager.h
zenith/lgiht/: light.h
zenith/light/: light.h  point-light.cpp  point-light.h
zenith/load/: importer.h  obj-importer.cpp  obj-importer.h
zenith/model/: loader.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h  vertex.h
zenith/models/: model.cpp  model.h  models.h  object.cpp  object.h
zenith/platform/opengl/: opengl-camera.cpp  opengl-camera.h  opengl-graphics-context.cpp  opengl-graphics-context.h  opengl-index-buf.cpp  opengl-index-buf.h  opengl-renderer.cpp  opengl-renderer.h  opengl-renderer.h.cpp  opengl-shader.cpp  opengl-shader.h  opengl-texture2D.cpp  opengl-texture2D.h  opengl-vertex-array.cpp  opengl-vertex-array.h  opengl-vertex-buf.cpp  opengl-vertex-buf.h
zenith/platform/windows/: window.cpp  window.h
zenith/render/: camera-controller.cpp  camera-controller.h  camera.cpp  camera.h  graphics-context.cpp  graphics-context.h  light.h  mesh.cpp  mesh.h  model.cpp  model.h  orthographic-camera.cpp  orthographic-camera.h  render-command.cpp  render-command.h  render-groups.h  render-object.cpp  render-object.h  render-queue.cpp  render-queue.h  renderer.cpp  renderer.h  shader-manager.cpp  shader-manager.h
zenith/render/2d/texture/: texture.cpp  texture.h
zenith/render/shader/: shader.cpp  shader.h
zenith/sandbox/: sandbox.cpp  sandbox.h
zenith/scene/3d/camera/: camera.cpp  camera.h
zenith/shader/: shader-manager.cpp  shader-manager.h  shader.cpp  shader.h
zenith/sys_include/: FUCKSTD.h  fast-obj.h  zenith_string.h
zenith/tool/: arrays.h  create-scope.h  file.h  layer-vector.h  system.h  time.h  timestep.h
zenith/virtual/: loader.h
zenith/vm/: jvm.cpp  jvm.h
zenith/window/: window.cpp  window.h
(+146 files in other folders)
