CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(sandbox)

SET(CMAKE_CXX_STANDARD 20)
SET(ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/../)

ADD_DEFINITIONS(-DZENITH_PLATFORM_WINDOWS)

ADD_SUBDIRECTORY(${ROOT_DIR}/zenith zenith_binary_dir)

ADD_EXECUTABLE(sandbox sandbox_app.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE zenith)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${ROOT_DIR}/zenith)